# youtubedownloader

./: .firebaserc  .gitignore  README.md  firebase.json  netlify.toml  package-lock.json  package.json  vite.config.js
functions/: index.js  package-lock.json  package.json
public/: app.js  firebase-client.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
