[package]
name = "youtube-downloader-desktop"
version = "1.0.0"
description = "Modern YouTube downloader desktop app"
authors = ["Frantisek Divoky"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "youtube_downloader_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tempfile = "3"
